--- a/QKSMS/src/main/res/xml/settings_notifications.xml
+++ b/QKSMS/src/main/res/xml/settings_notifications.xml
@@ -10,6 +10,20 @@
             android:layout="@layout/list_item_preference"
             android:title="@string/pref_notifications"
             android:widgetLayout="@layout/view_checkbox" />
+        <Preference
+            android:dependency="pref_key_notifications"
+            android:key="pref_key_whitelist"
+            android:layout="@layout/list_item_preference"
+            android:summary="@string/pref_whitelist_summary"
+            android:title="@string/pref_whitelist" />
+        <RingtonePreference
+            android:defaultValue="content://settings/system/notification_sound"
+            android:dependency="pref_key_notifications"
+            android:key="pref_key_whitelist_ringtone"
+            android:layout="@layout/list_item_preference"
+            android:ringtoneType="notification"
+            android:summary="@string/pref_whitelist_ringtone_summary"
+            android:title="@string/pref_whitelist_ringtone" />
         <CheckBoxPreference
             android:defaultValue="true"
             android:dependency="pref_key_notifications"
